--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BOT_TOKEN=OTY4NjkzMjYxMTY0MjI4NjMw.Ymij5g.VJxh83n-r7xKZoQG1sOdBHhB408
+BOT_TOKEN=OTY4NjkzMjYxMTY0MjI4NjMw.Ymij5g.wTqstspCZGIhAx0cCG5hSYAX9Ak
+ETHERSCAN_APIKEY=GZZRX99E4TWHVFWIWINYFW1WUT5TMTNNBV
