--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@discordx/pagination": "^2.0.1",
     "@discordx/utilities": "^4.1.0",
     "@koa/router": "^10.1.1",
+    "@types/node-fetch": "^2.6.1",
     "discord-modal": "^1.0.2",
     "discord-modals": "^1.3.5",
     "discord.js": "^13.6.0",
     "discordx": "^9.5.0",
     "dotenv": "^16.0.0",
     "koa": "^2.13.4",
+    "node-fetch": "^2.6.7",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
@@ -50,6 +52,7 @@
     "@types/koa": "^2.13.4",
     "@types/koa__router": "^8.0.11",
     "@types/node": "^17.0.23",
+    "@types/request-promise-native": "^1.0.18",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.1",
     "ts-node": "^10.7.0",
